--- a/circle.yml
+++ b/circle.yml
@@ -16,19 +16,13 @@ jobs:
     - run:
         name: Download Dependencies
         command: ./gradlew androidDependencies
-    - run:
-        name: Build debug APK and release APK
-        command: ./gradlew :app:assembleDebug
     - save_cache:
         paths:
         - ~/.gradle
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - run:
-        name: Run Tests
-        command: ./gradlew lint test
-    - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-        path: app/build/reports
-        destination: reports
-    - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-        path: app/build/test-results
-    # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+        name: Build debug APK and release APK
+        command: ./gradlew :app:assembleDebug
+    - store_artifacts:
+        path: app/build/apk/
+        destination: apks
