--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,5 @@ jobs:
         name: Build debug APK and release APK
         command: ./gradlew :app:assembleDebug
     - store_artifacts:
-        path: app/build/apk/
-        destination: apks
+        path: app/build/outputs/apk/
+        destination: apk
